# mcp-tool-description-quality

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  tools.json  tools_553.json
skills/tdas/: SKILL.md
tdas/: __init__.py  cli.py  core.py  models.py
tdas/augmenters/: __init__.py
tdas/detectors/: __init__.py
tdas/evaluation/: __init__.py
tdas/utils/: __init__.py
tests/: conftest.py  test_tdas.py
