[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdas"
version = "1.0.0"
description = "Tool Description Augmentation System: Automated detection and remediation of MCP tool description anti-patterns"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TDAS Maintainers" },
]
keywords = ["mcp", "llm", "agents", "tool-descriptions", "code-smells", "prompt-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
eval = [
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.scripts]
tdas = "tdas.cli:main"

[project.urls]
Repository = "https://github.com/codetherock/mcp-tool-description-quality"
"Bug Tracker" = "https://github.com/codetherock/mcp-tool-description-quality/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tdas*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
